--- a/.classpath
+++ b/.classpath
@@ -9,10 +9,14 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Avoid Game/lib/lwjgl-2.8.5/lwjgl-2.8.5/native/windows"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/lwjgl-2.8.5/lwjgl-2.8.5/jar/lwjgl.jar"/>
-	<classpathentry kind="lib" path="C:/Leap_Developer_Kit_0.7.6_3012_Windows/LeapSDK/lib/LeapJava.jar">
+	<classpathentry kind="lib" path="lib/lwjgl-2.8.5/lwjgl-2.8.5/jar/lwjgl.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Leap_Developer_Kit_0.7.6_3012_Windows/LeapSDK/lib/x86"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Graphics/lib/lwjgl-2.8.5/lwjgl-2.8.5/native/windows"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Leap_Developer_Kit_0.7.5_2742_Windows/LeapSDK/lib/LeapJava.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Leap_Developer_Kit_0.7.5_2742_Windows/LeapSDK/lib/x64"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
